--- a/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.html
+++ b/src/app/components/admin/admin-user/admin-user-list/admin-user-list.component.html
@@ -1,7 +1,7 @@
 <!-- * ADMIN-USER-LIST * -->
 
 <!-- Layout content -->
-<div class="layout-content">
+<div class="layout-content mb-5">
     <!-- Content -->
     <div class="container-fluid flex-grow-1 container-p-y">
 
