--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -17,6 +17,7 @@
                 </i>
             </button>
             <router-outlet></router-outlet>
+            <ddw-admin-mobile-footernav></ddw-admin-mobile-footernav>
         </div>
     </div>
 </div>
