--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
@@ -1,6 +1,6 @@
 <!-- * ADMIN-PAGE-LIST * -->
-<div class="row">
-    <div class="container">
+<div class="row mb-5">
+    <div class="container mb-5">
         <div class="card-deck">
             <ddw-admin-page-item
                     *ngFor="let pageEl of page$ | async;"
