--- a/src/app/components/admin/admin-core/admin-signup/admin-signup.component.html
+++ b/src/app/components/admin/admin-core/admin-signup/admin-signup.component.html
@@ -78,6 +78,10 @@
                                 class="btn btn-primary"><i class="fa fa-paper-plane"></i>&nbsp;Signup
                         </button>
 
+                        <div class="form-group mt-5">
+                            <p>Already a user? <a [routerLink]="['/admin/users/login']">Log in</a>.</p>
+                        </div>
+
                         <p class="mt-3 text-right">
                             <small><span class="text-danger">*</span> Required</small>
                         </p>
