--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -114,7 +114,7 @@
                         </div>
 
                         <div class="btn-group float-right" role="group" aria-label="Basic example">
-                            <a class="btn btn-secondary text-light btn-sm"
+                            <a class="btn btn-warning btn-sm"
                                [routerLink]="['/admin/pages']">
                                 <i class="fa fa-undo"></i>&nbsp;Cancel
                             </a>
