--- a/src/app/components/admin/admin-page/admin-page-item/admin-page-item.component.html
+++ b/src/app/components/admin/admin-page/admin-page-item/admin-page-item.component.html
@@ -5,7 +5,7 @@
             <h5 class="card-title">{{ page.title }}</h5>
             <h6 class="card-subtitle">{{ page.date.toDate() | date:'mediumDate' }}</h6>
             <hr>
-            <p class="card-text text-truncate">{{ page.body | slice:0:100 }}</p>
+            <p class="card-text" [innerHTML]="page.body | slice:0:120"></p>
             <span class="badge badge-pill badge-primary">{{ page.category }}</span>
             <p class="card-text text-secondary text-right"><small>{{ page.template }} Template</small></p>
         </div>
