--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -116,21 +116,39 @@
 
 
                         <div class="form-group">
-                            <div class="custom-file">
-                                <input type="file"
-                                       class="custom-file-input"
-                                       id="photoURL"
-                                       [class.invalid]="!f.photoURL.valid && f.photoURL.touched"
-                                       formControlName="photoURL"
-                                       accept=".png, .jpg, jpeg"
-                                       (change)="onFileSelection($event)">
-                                <label class="custom-file-label"
-                                       for="photoURL">Choose image...
-                                </label>
-                                <!--<div class="invalid-feedback">Example invalid custom file feedback</div>-->
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="custom-file">
+                                        <input type="file"
+                                               ddwDropZone
+                                               class="custom-file-input"
+                                               id="photoURL"
+                                               [class.invalid]="!f.photoURL.valid && f.photoURL.touched"
+                                               formControlName="photoURL"
+                                               accept=".png, .jpg, jpeg"
+                                               (change)="startUpload($event.target.files)">
+                                        <label class="custom-file-label"
+                                               for="photoURL">Choose image...
+                                        </label>
+                                        <!--<div class="invalid-feedback">Example invalid custom file feedback</div>-->
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div *ngIf="downloadURL | async as url">
+                                        <a [href]="url | async">{{ url }}</a>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
 
+                            <div *ngIf="percentage | async as pct">
+                                <progress class="progress is-info"
+                                          [value]="pct"
+                                          max="100">
+                                </progress>
+                                {{ pct | number }}%
+                            </div>
+                        </div>                        
+                
 
                         <div class="form-group">
                             <div class="custom-control custom-checkbox">
