Added better UI for image upload and paste

--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -124,8 +124,11 @@
                                     <div class="row">
                                         <div class="col-sm-6">
                                             <div class="custom-file">
-                                                <label class="custom-file-label">
+                                                <label class="custom-file-label" *ngIf="!downloadURL">
                                                     Click To Select
+                                                </label>
+                                                <label class="custom-file-label text-truncate" *ngIf="downloadURL">
+                                                    {{ downloadURL | async }}
                                                 </label>
                                                 <input type="file"
                                                        ddwDropZone
@@ -135,11 +138,23 @@
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
-                                            <div *ngIf="downloadURL | async as url">
-                                                Copy and paste url into input below to use:
-                                                <p><a [href]="url | async">{{ url }}</a></p>
+                                            <div *ngIf="downloadURL | async as url; else loadingURL">
+                                                <p class="pb-2">
+                                                    <b>Copy and paste url into the Image URL input below:</b>
+                                                </p>
+                                                <p>
+                                                    <a [href]="url">
+                                                        {{ url }}
+                                                    </a>
+                                                </p>
                                                 <p><img [src]="url" style="max-width:100px;"></p>
                                             </div>
+                                            <ng-template #loadingURL>
+                                                <p class="text-center text-secondary">
+                                                    Upload Image, Then a URL will appear here. Copy and paste that link
+                                                    into Image URL below to use.
+                                                </p>
+                                            </ng-template>
                                         </div>
                                     </div>
 
@@ -160,7 +175,7 @@
                             <input type="text"
                                    class="form-control"
                                    [class.invalid]="!f.photoURL.valid && f.photoURL.touched"
-                                   [(ngModel)]="page.photoURL"
+                                   [(ngModel)]="photoURL"
                                    formControlName="photoURL">
                             <p class="help-block alert alert-warning text-center mt-1"
                                *ngIf="!f.photoURL.valid && f.photoURL.touched">
