--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -159,12 +159,10 @@
                                     </div>
 
                                     <div class="mt-4 mb-3" *ngIf="percentage | async as pct">
-                                        <mat-progress-bar
-                                                mode="determinate"
-                                                [color]="color"
-                                                [value]="pct">
-                                        </mat-progress-bar>
-                                        Image download: {{ pct | number }}%
+                                        <progressbar class="progress-striped active"
+                                                     [value]="pct"
+                                                     type="primary"><i>{{ pct | number }}%</i>
+                                        </progressbar>
                                     </div>
                                 </div>
                             </div>
