Can now toggle view of pages between list/table and cards

--- a/src/app/components/admin/admin-page/admin-page-item/admin-page-item.component.html
+++ b/src/app/components/admin/admin-page/admin-page-item/admin-page-item.component.html
@@ -1,3 +1,4 @@
+<!-- * ADMIN-PAGE-ITEM * -->
 <a [routerLink]="['/admin/pages/', page.$key]">
     <div class="card text-dark mb-2">
         <img class="card-img-top" [src]="page.photoURL" [alt]="page.title">
