--- a/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-list/admin-page-list.component.html
@@ -1,6 +1,21 @@
 <!-- * ADMIN-PAGE-LIST * -->
 
-<div class="container mb-5">
+<div class="row mb-4">
+    <div class="container text-right">
+        <button class="btn btn-outline-info"
+                (click)="toggleListCardView()"
+                *ngIf="!showListToggle">
+            <i class="fa fa-th-list"></i> View as list
+        </button>
+        <button class="btn btn-outline-info"
+                (click)="toggleListCardView()"
+                *ngIf="showListToggle">
+            <i class="fa fa-credit-card-front"></i> View as Cards
+        </button>
+    </div>
+</div>
+
+<div class="container mb-5" *ngIf="!showListToggle">
     <div class="card-deck">
         <ddw-admin-page-item
                 *ngFor="let pageEl of page$ | async;"
@@ -8,3 +23,104 @@
         </ddw-admin-page-item>
     </div>
 </div>
+
+
+<!-- Layout content -->
+<div class="layout-content mb-5" *ngIf="showListToggle">
+    <!-- Content -->
+    <div class="container-fluid flex-grow-1 container-p-y">
+
+        <div class="card p-3">
+            <h4 class="font-weight-bold py-3 mb-4 pl-2">
+                All Pages List
+            </h4>
+
+            <div class="card-datatable table-responsive">
+                <table id="user-list" class="table table-striped table-bordered table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col">Page</th>
+                        <th scope="col">Title</th>
+                        <th scope="col">Body</th>
+                        <th scope="col">Published</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Author</th>
+                        <th scope="col">Options</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let page of pageList | async;">
+                        <td scope="col">
+                            <a [routerLink]="['/admin/pages/', page.id]">
+                                <img [src]="page.photoURL"
+                                     [alt]="page.title"
+                                     class="page-image">
+                            </a>
+                        </td>
+                        <td scope="col">
+                            <a [routerLink]="['/admin/pages/', page.id]" class="text-truncate">
+                                {{ page.title }}
+                            </a>
+                        </td>
+                        <td scope="col">
+                            <a [routerLink]="['/admin/pages/', page.id]" class="text-truncate">
+                                <span class="card-text">{{ page.body | slice:0:20 }}</span>
+                            </a>
+                        </td>
+                        <td scope="col" style="text-align:center;">
+                                <span class="badge badge-outline-success" *ngIf="page.published">
+                                    Yes
+                                </span>
+                            <span class="badge badge-outline-danger" *ngIf="!page.published">
+                                    No
+                                </span>
+                        </td>
+                        <td scope="col">{{ page.date.toDate() | date:'mediumDate' }}</td>
+                        <td scope="col" style="text-align:center;">
+                            <span>{{ page.author }}</span>
+                        </td>
+                        <!--<td scope="col" style="text-align:center;">-->
+                        <!--<span class="badge badge-outline-success" *ngIf="user.admin">-->
+                        <!--Yes-->
+                        <!--</span>-->
+                        <!--<span class="badge badge-outline-danger" *ngIf="!user.admin">-->
+                        <!--No-->
+                        <!--</span>-->
+                        <!--</td>-->
+                        <td>
+                            <a class="btn btn-default btn-xs icon-btn md-btn-flat user-tooltip"
+                               [routerLink]="['/admin/pages/', page.id]">
+                                <i class="fa fa-pencil"></i>&nbsp;
+                            </a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+                    <li class="page-item">
+                        <a class="page-link" [routerLink]="['/admin/users']" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
+                    <li class="page-item"><a class="page-link" [routerLink]="['/admin/users']">1</a></li>
+                    <li class="page-item">
+                        <a class="page-link" [routerLink]="['/admin/users']" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+
+        </div>
+
+    </div>
+    <!-- / Content -->
+
+
+</div>
+<!-- Layout content -->
